<resources>
    <string name="processing_indecator">For making sure that photo is saved.</string>
    <string name="pref_aemode_title">ISO/Exposure Time HDR+</string>
    <string name="pref_aemode_0">Automatic</string>
    <string name="pref_aemodef_0">Automatic</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="pref_exposure_max_time_title">Max. Exposure Time</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="pref_exposure_max_time_0">0.3 sec</string>
    <string name="pref_exposure_max_time_1">0.5 sec</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="pref_exposure_max_time_2">1 sec</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="pref_exposure_max_time_3">3 sec</string>
    <string name="pref_exposure_max_time_4">0.6 * Max. Exposure Time</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos &amp; videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">You can find Locked Folder in Google Photos in the Library tab</string>
    <string name="about_mars_title">Hide sensitive photos &amp; videos</string>
    <string name="accessibility_amber_start">Start cinematic blur</string>
    <string name="accessibility_amber_stop">Stop cinematic blur</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="pref_exposure_max_time_5">Max. Exposure Time</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel photo</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="pref_aemode_5">ISO 100/Time max</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="shortcut_opensett_long_label">Open settings</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$d times speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="shortcut_opensett_short_label">Settings</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="pref_aemode_24">Time 1/500s</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech enhancement on</string>
    <string name="pref_aemode_25">Time 1/1000s</string>
    <string name="pref_aemode_26">Time Max. 1x</string>
    <string name="pref_aemode_27">Time Max. 2x</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Take Night Sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_auto_record_speed_desc">Time Lapse auto speed</string>
    <string name="pref_aemode_6">Time 32.0s</string>
    <string name="pref_aemode_7">Time 16.0s</string>
    <string name="pref_aemode_8">Time 8.0s</string>
    <string name="pref_aemode_9">Time 4.0s</string>
    <string name="accessibility_video_mode_desc">Normal Video Mode</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="pref_aemode_10">Time 2.0s</string>
    <string name="pref_aemode_11">Time 1.0s</string>
    <string name="pref_aemode_12">Time 1/2s</string>
    <string name="pref_aemode_13">Time 1/3s</string>
    <string name="pref_aemode_14">Time 1/4s</string>
    <string name="pref_aemode_15">Time 1/5s</string>
    <string name="pref_aemode_16">Time 1/7s</string>
    <string name="pref_aemode_17">Time 1/10s</string>
    <string name="pref_aemode_18">Time 1/20s</string>
    <string name="pref_aemode_19">Time 1/33s</string>
    <string name="pref_aemode_20">Time 1/50s</string>
    <string name="pref_aemode_21">Time 1/67s</string>
    <string name="pref_aemode_22">Time 1/100s</string>
    <string name="pref_aemode_23">Time 1/200s</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_desc">Focus</string>
    <string name="amber_description">Creates a cinematic effect by blurring the background behind your subject and records at 24 frames/sec</string>
    <string name="amber_move_closer">Move closer to the subject</string>
    <string name="amber_name">Cinematic Blur</string>
    <string name="amber_tap_on_subject_to_focus">Tap on a subject to focus</string>
    <string name="amethyst_description">More true to life with a wider range of colors, brightness, and contrast</string>
    <string name="amethyst_name">10-bit HDR</string>
    <string name="apex_target_os_prefix">TD1</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect_ratio_desc">Ratio</string>
    <string name="astro_auto_acc_desc">Astrophotography Auto</string>
    <string name="astro_auto_desc">Auto</string>
    <string name="astro_desc">Astrophotography</string>
    <string name="astro_edu_image_content_description">Example photo of Astrophotography</string>
    <string name="astro_line_1">Place phone on a steady surface like a tripod or rock.</string>
    <string name="astro_line_2">The shutter will change from a moon to stars. Tap it.</string>
    <string name="astro_off_acc_desc">Astrophotography Off</string>
    <string name="astro_off_desc">Off</string>
    <string name="astro_option_desc">Astrophotography options</string>
    <string name="astro_photo_url">https://www.gstatic.com/aiux/gca/astro/astro_edu.jpg</string>
    <string name="astrophotography_edu_title">Astrophotography</string>
    <string name="astrophotography_suggestion_text">Try Astrophotography</string>
    <string name="auto_pos_desc">Auto</string>
    <string name="auto_pos_desc_full">%d seconds Auto</string>
    <string name="autotimer_tutorial_body">Get in the shot and smile or make a funny face to get photos automatically. Tap the button to start.</string>
    <string name="autotimer_tutorial_title">Snap photos with a smile</string>
    <string name="beta_label_text">Beta</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness_ev_announcement">Brightness is now %1$s</string>
    <string name="brightness_knob_accessibility_description">Brightness knob</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_name">Smartburst</string>
    <string name="cam_flash_auto">Auto</string>
    <string name="cam_flash_ns">Night Sight</string>
    <string name="cam_flash_off">Off</string>
    <string name="cam_flash_off_alt">None</string>
    <string name="cam_flash_on">On</string>
    <string name="cam_flash_on_alt">Flash</string>
    <string name="camera_disabled_body">"Your organization doesn't allow you to use Camera. Contact your IT admin for more info."</string>
    <string name="camera_disabled_close_app">Close</string>
    <string name="camera_disabled_title">Blocked by work policy</string>
    <string name="camera_fallback_close_app">Close app</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="longexposure_suggestion_text">Try Night Sight</string>
    <string name="mode_settings">Settings</string>
    <string name="portrait_suggestion_text">Try Portrait mode</string>
    <string name="record_location_notification">Save location</string>
    <string name="retake_button_description">Retake</string>
    <string name="review_button_description">Review</string>
    <string name="shortcut_selfie_long_label">Take a selfie</string>
    <string name="shortcut_selfie_short_label">Selfie</string>
    <string name="shortcut_video_long_label">Take a video</string>
    <string name="shortcut_video_short_label">Video</string>
    <string name="toast_help_text">Learn more about Top Shot</string>
    <string name="toast_motion_text">Top Shot</string>
    <string name="toast_options">Options</string>
</resources>