<?xml version="1.0" encoding="utf-8"?>
<shortcuts
  xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:icon="@drawable/ic_selfie" android:enabled="true" android:shortcutId="selfie" android:shortcutShortLabel="@string/shortcut_selfie_short_label" android:shortcutLongLabel="@string/shortcut_selfie_long_label">
        <intent android:targetPackage="com.shamim.cam" android:action="android.media.action.STILL_IMAGE_CAMERA" android:targetClass="com.android.camera.CameraImageActivity">
            <extra android:name="android.intent.extra.USE_FRONT_CAMERA" android:value="true" />
        </intent>
    </shortcut>
    <shortcut android:icon="@drawable/ic_video" android:enabled="true" android:shortcutId="video" android:shortcutShortLabel="@string/shortcut_video_short_label" android:shortcutLongLabel="@string/shortcut_video_long_label">
        <intent android:targetPackage="com.shamim.cam" android:action="android.media.action.VIDEO_CAMERA" android:targetClass="com.android.camera.CameraVideoShortcutActivity" />
    </shortcut>
    <shortcut android:icon="@drawable/abc_1_shortcuts_nightsight" android:enabled="true" android:shortcutId="night" android:shortcutShortLabel="@string/accessibility_take_nightsight_button" android:shortcutLongLabel="@string/longexposure_suggestion_text">
        <intent android:targetPackage="com.shamim.cam" android:action="android.media.action.NIGHTSIGHT" android:targetClass="com.google.android.apps.camera.legacy.app.activity.CameraImageActivity" />
    </shortcut>
    <shortcut android:icon="@drawable/ic_shortcuts_setting" android:enabled="true" android:shortcutId="opensetting" android:shortcutShortLabel="@string/shortcut_opensett_short_label" android:shortcutLongLabel="@string/shortcut_opensett_long_label">
        <intent android:targetPackage="com.shamim.cam" android:action="android.intent.action.MAIN" android:targetClass="com.google.android.apps.camera.legacy.app.settings.CameraSettingsActivity">
            <extra android:name="com.android.settings.action.EXTRA_SETTINGS" android:value="true" />
        </intent>
    </shortcut>
    <shortcut android:icon="@drawable/abc_1_shortcuts_portrait" android:enabled="true" android:shortcutId="portrait" android:shortcutShortLabel="@string/accessibility_take_portrait_button" android:shortcutLongLabel="@string/portrait_suggestion_text">
        <intent android:targetPackage="com.shamim.cam" android:action="android.media.action.PORTRAIT" android:targetClass="com.google.android.apps.camera.legacy.app.activity.CameraImageActivity" />
    </shortcut>
</shortcuts>