<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.camera.bottombar.SideButtonContainer android:id="@id/left_placeholder_container" android:tag="bottomBarContent" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="@dimen/bottom_bar_side_button_diameter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/left_space" app:layout_constraintTop_toTopOf="parent">
        <FrameLayout android:id="@id/left_placeholder" android:tag="bottomBarContent" android:background="@android:color/transparent" android:visibility="gone" android:clipChildren="false" android:layout_width="@dimen/bottom_bar_side_button_diameter" android:layout_height="@dimen/bottom_bar_side_button_diameter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/center_left_placeholder" app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout android:id="@id/center_left_placeholder" android:tag="bottomBarContent" android:background="@android:color/transparent" android:clipChildren="false" android:layout_width="@dimen/bottom_bar_side_button_diameter" android:layout_height="@dimen/bottom_bar_side_button_diameter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/left_placeholder" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
            <com.google.android.apps.camera.bottombar.CameraSwitchButton android:layout_gravity="center" android:id="@id/camera_switch_button" android:background="@drawable/camera_switch_button_background" android:visibility="visible" android:layout_width="@dimen/camera_switch_button_diameter" android:layout_height="@dimen/camera_switch_button_diameter" android:src="@drawable/front_back_switch_button_animation" />
            <ViewStub android:layout_gravity="center" android:id="@id/pause_resume_button_view_stub" android:layout="@layout/pause_resume_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" />
            <ViewStub android:layout_gravity="center" android:id="@id/retake_button_view_stub" android:layout="@layout/retake_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/retake_button_description" />
            <ViewStub android:layout_gravity="center" android:id="@id/left_side_cancel_button_view_stub" android:layout="@layout/left_side_cancel_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/cancel_button_description" />
        </FrameLayout>
    </com.google.android.apps.camera.bottombar.SideButtonContainer>
    <Space android:id="@id/left_space" android:tag="bottomBarContent" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintLeft_toRightOf="@id/left_placeholder_container" app:layout_constraintRight_toLeftOf="@id/center_placeholder" app:layout_constraintWidth="true" app:layout_constraintWidth_max="@dimen/bottom_bar_space_gap_width" />
    <FrameLayout android:id="@id/center_placeholder" android:tag="bottomBarContent" android:background="@android:color/transparent" android:layout_width="@dimen/bottom_bar_content_size" android:layout_height="@dimen/bottom_bar_content_size" android:elevation="2.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/left_space" app:layout_constraintRight_toLeftOf="@id/right_space" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.apps.camera.ui.shutterbutton.ShutterButton android:layout_gravity="center" android:id="@id/shutter_button" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:soundEffectsEnabled="false" android:accessibilityTraversalBefore="@id/thumbnail_button" />
        <com.google.android.apps.camera.ui.shutterbutton.ShutterButtonProgressOverlay android:layout_gravity="center" android:id="@id/shutter_progress_overlay" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:soundEffectsEnabled="false" />
    </FrameLayout>
    <Space android:id="@id/right_space" android:tag="bottomBarContent" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintLeft_toRightOf="@id/center_placeholder" app:layout_constraintRight_toLeftOf="@id/right_placeholder_container" app:layout_constraintWidth="true" app:layout_constraintWidth_max="@dimen/bottom_bar_space_gap_width" />
    <com.google.android.apps.camera.bottombar.SideButtonContainer android:id="@id/right_placeholder_container" android:tag="bottomBarContent" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="@dimen/bottom_bar_side_button_diameter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/right_space" app:layout_constraintRight_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent">
        <FrameLayout android:id="@id/center_right_placeholder" android:tag="bottomBarContent" android:background="@android:color/transparent" android:clipChildren="false" android:layout_width="@dimen/bottom_bar_side_button_diameter" android:layout_height="@dimen/bottom_bar_side_button_diameter" android:alpha="10.0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/right_placeholder" app:layout_constraintTop_toTopOf="parent">
            <com.google.android.apps.camera.bottombar.RoundedThumbnailView android:layout_gravity="center" android:id="@id/thumbnail_button" android:background="?android:selectableItemBackgroundBorderless" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/accessibility_filmstrip_toggle" />
            <ViewStub android:id="@id/snapshot_button_stub" android:layout="@layout/snapshot_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/accessibility_shutter_button" />
            <ViewStub android:layout_gravity="center" android:id="@id/cancel_button_stub" android:layout="@layout/cancel_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/cancel_button_description" />
            <ViewStub android:layout_gravity="center" android:id="@id/review_play_button_view_stub" android:background="@drawable/crossfade_button_background" android:visibility="gone" android:layout="@layout/review_play_button" android:layout_width="@dimen/recording_control_button_diameter" android:layout_height="@dimen/recording_control_button_diameter" android:contentDescription="@string/review_button_description" />
        </FrameLayout>
        <FrameLayout android:id="@id/right_placeholder" android:tag="bottomBarContent" android:background="@android:color/transparent" android:visibility="gone" android:clipChildren="false" android:layout_width="@dimen/bottom_bar_side_button_diameter" android:layout_height="@dimen/bottom_bar_side_button_diameter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/center_right_placeholder" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.apps.camera.bottombar.SideButtonContainer>
    <com.google.android.apps.camera.ui.zoomlock.ZoomLockView android:id="@id/zoom_lock_view" android:visibility="gone" android:layout_width="@dimen/zoom_lock_view_width" android:layout_height="@dimen/bottom_bar_content_size" android:elevation="3.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
</merge>